--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"sharp": "^0.33.5",
-		"ws": "^8.18.0"
+		"ws": "^8.18.0",
+		"winston": "^3.8.2"
 	},
 	"devDependencies": {
 		"@types/react": "18.3.9",
