--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"express": "^4.21.2",
+		"express": "^5.1.0",
 		"musicbrainz-api": "^0.19.1",
-		"next": "15.1.2",
+		"next": "^15.4.4",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"sharp": "^0.33.5",
-		"ws": "^8.18.0",
-		"winston": "^3.8.2"
+		"winston": "^3.8.2",
+		"ws": "^8.18.0"
 	},
 	"devDependencies": {
 		"@types/react": "19.1.8",
